# lem_in

./: CMakeLists.txt  Makefile  README.md  lem_in  targets  test
includes/: lem_in.h
lem_in.dSYM/Contents/Resources/DWARF/: lem_in
libft/: Makefile  delete_splitted_line.c  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lst_print.c  ft_lst_push_back.c  ft_lst_push_front.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_str_isalpha.c  ft_str_isdigit.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  (+26 more)
srcs/: add_path.c  adjacency_matrix.c  checkers.c  count_ants_on_each_path.c  deleting.c  dinic_algorithm.c  finding_best_path.c  hasher.c  init.c  main.c  new_memcpy.c  parse_ants_number.c  parse_links.c  parse_map.c  parse_rooms.c  print_ants.c  room_list.c
srcs/visual/: init_window.c
visual/: Makefile  map  visualizer
visual/includes/: visualizer.h
visual/maps/: map  map1  map3  map_test  maps4  maps5  mapss
visual/srcs/: background_graph.c  buf.c  check_coords.c  draw_ants.c  draw_links.c  draw_nodes.c  flow_color.c  free_show_error.c  main  main.c  min_max_coords.c  new_coords.c  random.c  render_load_surface.c  test  test.c  v_adjacency_matrix.c  v_checkers.c  v_deleting.c  v_parse_ants_number.c  v_parse_links.c  v_parse_map.c  v_parse_path.c  v_parse_rooms.c  work_with_coords.c
visual/visualizer.dSYM/Contents/Resources/DWARF/: visualizer
